fixed the sform layout problem

--- a/public/assets/pform_css/style.scss
+++ b/public/assets/pform_css/style.scss
@@ -244,11 +244,18 @@ input.valid, textarea.valid{
         padding-right: 10px;
     }
 
-    .form-group{
-       span.span-text{
-       height: 100%;
+   
+       .span-text{
+        height: 35px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid;
+        padding: 0 16px;
+        margin-top: 5px;
+        border-radius: 4px;
+      
        }
-    }
 }
 
 
